# link

./: .dockerignore  .gitignore  COOLIFY-DEPLOYMENT.md  Cargo.toml  Dockerfile  coolify-env-template.txt  coolify.env.template  deploy.sh  docker-compose.yml  env.example  prometheus.yml
.cursor/: implementation-plan.md
.sqlx/: query-1e644da2b56b0620fe6ba8e063aa653787e605b998a4490ab6799238e2db45b2.json  query-278597218b261cf5999907f9490f2283d7b50be77bfd6b46aaa596b0e06f345a.json  query-35563247c38e0a8752c57a05678d2f22b631ee0881f3c67c2aaec449368c4fb8.json  query-9a5fbb2af6ad0423fcd27e35d92975396fcbd3c58d3f1319b46ead0bbcea2382.json
benches/: benchmarks.rs
frontend/: .dockerignore  Dockerfile  instrumentation.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/shorten/: route.ts
frontend/app/components/: Analytics.tsx  LinkForm.tsx  LinkList.tsx
frontend/lib/: api.ts  utils.ts
migrations/: 001_initial.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/handlers/: health.rs  mod.rs  redirect.rs  shorten.rs
src/middleware/: mod.rs  rate_limit.rs
src/models/: link.rs  mod.rs
src/services/: cache.rs  db.rs  mod.rs  shortener.rs
