[package]
name = "link-shortener-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "link-shortener-backend"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false

[lib]
name = "link_shortener_backend"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.45.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors", "compression-gzip", "compression-br", "set-header", "trace"] }
tower_governor = { version = "0.7", features = ["axum", "tracing"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
redis = { version = "0.26.1", features = ["tokio-comp", "connection-manager"] }
bb8 = "0.8.6"
bb8-redis = "0.15"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
base64 = "0.22.1"
sha2 = "0.10.9"
once_cell = "1.21.3"
thiserror = "1.0.69"
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dotenv = "0.15.0"
prometheus = "0.13.4"
url = "2.5.4"
time = { version = "0.3.41", features = ["serde", "macros", "formatting", "parsing"] }

[dev-dependencies]
rstest = "0.25.0"
tokio-test = "0.4.4"
criterion = { version = "0.5.1", features = ["html_reports"] }
tempfile = "3.14.0"
fastrand = "2.3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true 